Fix logos on mobile view

--- a/src/main/content/_assets/css/home.scss
+++ b/src/main/content/_assets/css/home.scss
@@ -1325,6 +1325,10 @@ body {
         padding: 30px;
     }
 
+    #logo_image_row img {
+        max-width: 100%;
+    }
+
     #cloud_9 {
         top: 820px;
         right: -62px;
